Optimized color system (removed deprecation warnings) + general code optimization, proper main class.